Fix jump when opening mailer

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -172,6 +172,12 @@ dialog
     .cover-subheading
         font-size 4vmin
 
+
+@media screen and (max-width 525px)
+    dialog
+        max-width 90vw
+        top 55%
+
 @media print
     *
     :after
